[package]
name = "starscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
strum_macros = "0.24.3"
itertools = "0.10.3"
serde_json = "1.0.60"
env_logger = "0.10.0"
tokio = { version = "1.23", features = ["full"] }
spacedust = "1.0.1"
flume = "0.10.12"
ctrlc = "3.2.1"
log = "0.4.17"
dotenv = "0.15.0"
http = "0.2.9"
futures = "0.3.26"
[dependencies.chrono]
version = "0.4.23"
[dependencies.bson]
version = "2.5.0"
features = ["chrono-0_4"]
[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]