[package]
name = "starscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
strum_macros = "0.24"
itertools = "0.10"
serde_json = "1.0"
serde_yaml = "0.9"
spacedust = "1.0"
ctrlc = "3.2"
log = "0.4"
dotenv = "0.15"
glob = "0.3"
surrealdb = "1.0.0-beta.9"
[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "postgres", "json"]
[dependencies.serde]
version = "1.0"
features = ["derive"]
[dependencies.chrono]
version = "0.4"
[dependencies.uuid]
version = "1.3"
features = ["v4", "fast-rng"]
[dependencies.tokio]
version = "1.27"
features = ["full"]
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
